Workcraft/src/org/workcraft/plugins/stg/javacc/DotGParser.java
/* Generated By:JavaCC: Do not edit this line. DotGParser.java */
package org.workcraft.plugins.stg.javacc;

import java.util.HashMap;
import java.util.List;
import java.util.LinkedList;
import java.util.Map;

import org.workcraft.dom.Node;
import org.workcraft.plugins.stg.SignalTransition.Direction;
import org.workcraft.plugins.stg.SignalTransition.Type;
import org.workcraft.plugins.stg.*;
import org.workcraft.util.Pair;
import org.workcraft.util.Triple;
import org.workcraft.exceptions.InvalidConnectionException;
import org.workcraft.exceptions.FormatException;
import org.workcraft.exceptions.NotFoundException;

@SuppressWarnings("all")
public class DotGParser implements DotGParserConstants {
        private Map<String, Type> signals;
        private Map<Pair<Node, Node>, STGPlace> implicitPlaces;
        private STG stg;

        private void init() {
                signals = new HashMap<String, Type>();
                stg = new STG();
                implicitPlaces = new HashMap<Pair<Node, Node>, STGPlace>();
        }

        private Node getOrCreate (String name) {

                Type t = signals.get (name);
                try {
                        return stg.getNodeByReference(name);
                } catch (NotFoundException e) {
                try {
                        return stg.getNodeByReference(name+"/0");
                } catch (NotFoundException ee) {
                        if (t==null)
                                return stg.createPlace(name);
                        else if (t.equals(Type.DUMMY))
                                return stg.createDummyTransition(name);
                        else
                                throw new FormatException (name + " was declared as " + t + ", but is referenced as DUMMY. Transition direction tag (+,-,~) expected.");
                }
                }
        }

        private Node getOrCreate (Pair<String, Integer> ref)
        {
<<<<<<< TREE
                Integer instance = ref.getSecond();
=======
                String reference = stg.makeReference(ref);
>>>>>>> MERGE-SOURCE
                String name = ref.getFirst();
<<<<<<< TREE
                String reference = name+"/"+((instance==null)?0:instance);

=======
>>>>>>> MERGE-SOURCE
                try {
                        return stg.getNodeByReference (reference);
                } catch (NotFoundException e) {
                        Type t = signals.get (name);
                        if (t == null || !t.equals(Type.DUMMY))
                                throw new FormatException (name + " is referenced as DUMMY but was not declared as such.");
                        else
                        {
                                DummyTransition dt = stg.createDummyTransition(null);
                                stg.setName(dt, reference);
                                dt.setName(name);
                                return dt;
                        }
                }
        }

        private Node getOrCreate (Triple<String, Direction, Integer> ref) {
                String reference = stg.makeReference(ref);
                String name = ref.getFirst();
                try {
                        return stg.getNodeByReference (reference);
                } catch (NotFoundException e) {

                        SignalTransition st = stg.createSignalTransition();
                        stg.setName (st, reference);
                        Type t = signals.get(name);
                        if (t==null)
                                throw new FormatException ("Undeclared signal encountered: " + name +
                                " ("+reference+"). Possibly malformed header.");
                        st.setSignalType(t);
                        return st;

                }
        }

        private void createArc (Node first, Node second) {
<<<<<<< TREE
=======

>>>>>>> MERGE-SOURCE
                try {
                        ConnectionResult result = stg.connect(first, second);
                        STGPlace implicitPlace = result.getImplicitPlace();

                        if (implicitPlace != null)
                                implicitPlaces.put (Pair.of (first, second), implicitPlace);

                } catch (InvalidConnectionException e)
                {
                        throw new FormatException ("Cannot create arc from " + stg.getNodeReference(first) +
                         " to " + stg.getNodeReference(second) + ".", e);
                }
        }

        private void setSignalsType (List<String> list, Type type) {
                for (String signal : list) {
                        if (signals.containsKey(signal))
                        {
                                Type prevType = signals.get(signal);
                                if (prevType != null && prevType.equals(type))
                                        throw new FormatException (type + " signal \u005c"" + signal + "\u005c" was already listed as " + prevType);
                        }
                        else
                                signals.put(signal, type);
                }
        }

  final public STG parse() throws ParseException {
<<<<<<< TREE
=======
    if (jj_2_1(3)) {
      jj_consume_token(LINEBREAK);
    } else {
      ;
    }
>>>>>>> MERGE-SOURCE
          init();
    label_1:
    while (true) {
<<<<<<< TREE
      if (jj_2_1(3)) {
=======
      if (jj_2_2(3)) {
>>>>>>> MERGE-SOURCE
        ;
      } else {
        break label_1;
      }
      header();
      jj_consume_token(LINEBREAK);
    }
    graph();
    label_2:
    while (true) {
<<<<<<< TREE
      if (jj_2_2(3)) {
=======
      if (jj_2_3(3)) {
>>>>>>> MERGE-SOURCE
        ;
      } else {
        break label_2;
      }
      footer();
      jj_consume_token(LINEBREAK);
    }
    jj_consume_token(0);
          {if (true) return stg;}
    throw new Error("Missing return statement in function");
  }

  final public void header() throws ParseException {
                  List<String> list;
<<<<<<< TREE
    if (jj_2_3(3)) {
=======
    if (jj_2_4(3)) {
>>>>>>> MERGE-SOURCE
      jj_consume_token(LINEBREAK);
    } else {
      ;
    }
<<<<<<< TREE
    if (jj_2_5(3)) {
=======
    if (jj_2_6(3)) {
>>>>>>> MERGE-SOURCE
      jj_consume_token(INPUT_HEADER);
      list = signalList();
                                                     setSignalsType (list, Type.INPUT);
<<<<<<< TREE
    } else if (jj_2_6(3)) {
=======
    } else if (jj_2_7(3)) {
>>>>>>> MERGE-SOURCE
      jj_consume_token(OUTPUT_HEADER);
      list = signalList();
                                                       setSignalsType (list, Type.OUTPUT);
<<<<<<< TREE
    } else if (jj_2_7(3)) {
=======
    } else if (jj_2_8(3)) {
>>>>>>> MERGE-SOURCE
      jj_consume_token(INTERNAL_HEADER);
      list = signalList();
                                                         setSignalsType (list, Type.INTERNAL);
<<<<<<< TREE
    } else if (jj_2_8(3)) {
=======
    } else if (jj_2_9(3)) {
>>>>>>> MERGE-SOURCE
      jj_consume_token(DUMMY_HEADER);
      list = signalList();
                                                      setSignalsType (list, Type.DUMMY);
<<<<<<< TREE
    } else if (jj_2_9(3)) {
=======
    } else if (jj_2_10(3)) {
>>>>>>> MERGE-SOURCE
      jj_consume_token(UNSUPPORTED_HEADER);
      label_3:
      while (true) {
<<<<<<< TREE
        if (jj_2_4(3)) {
=======
        if (jj_2_5(3)) {
>>>>>>> MERGE-SOURCE
          ;
        } else {
          break label_3;
        }
        jj_consume_token(ANY);
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public List<String> signalList() throws ParseException {
                              Token t; List<String> list = new LinkedList<String>();
    label_4:
    while (true) {
<<<<<<< TREE
      if (jj_2_10(3)) {
=======
      if (jj_2_11(3)) {
>>>>>>> MERGE-SOURCE
        ;
      } else {
        break label_4;
      }
      t = jj_consume_token(NAME);
                       list.add (t.image);
    }
         {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  final public void footer() throws ParseException {
<<<<<<< TREE
    if (jj_2_12(3)) {
=======
    if (jj_2_13(3)) {
>>>>>>> MERGE-SOURCE
      jj_consume_token(MARKING);
      marking();
<<<<<<< TREE
    } else if (jj_2_13(3)) {
=======
    } else if (jj_2_14(3)) {
>>>>>>> MERGE-SOURCE
      jj_consume_token(CAPACITY);
      capacity();
<<<<<<< TREE
    } else if (jj_2_14(3)) {
=======
    } else if (jj_2_15(3)) {
>>>>>>> MERGE-SOURCE
      jj_consume_token(UNSUPPORTED_HEADER);
      label_5:
      while (true) {
<<<<<<< TREE
        if (jj_2_11(3)) {
=======
        if (jj_2_12(3)) {
>>>>>>> MERGE-SOURCE
          ;
        } else {
          break label_5;
        }
        jj_consume_token(ANY);
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void capacity() throws ParseException {
    label_6:
    while (true) {
<<<<<<< TREE
      if (jj_2_15(3)) {
=======
      if (jj_2_16(3)) {
>>>>>>> MERGE-SOURCE
        ;
      } else {
        break label_6;
      }
      capacityEntry();
    }
  }

  final public void capacityEntry() throws ParseException {
                         STGPlace p; int value;
<<<<<<< TREE
    if (jj_2_16(3)) {
=======
    if (jj_2_17(3)) {
>>>>>>> MERGE-SOURCE
      p = implicitPlaceReference();
<<<<<<< TREE
    } else if (jj_2_17(3)) {
=======
    } else if (jj_2_18(3)) {
>>>>>>> MERGE-SOURCE
      p = explicitPlaceReference();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    value = assignment();
                p.setCapacity(value);
  }

  final public void marking() throws ParseException {
    jj_consume_token(16);
    label_7:
    while (true) {
<<<<<<< TREE
      if (jj_2_18(3)) {
=======
      if (jj_2_19(3)) {
>>>>>>> MERGE-SOURCE
        ;
      } else {
        break label_7;
      }
      markingEntry();
    }
    jj_consume_token(17);
  }

  final public int assignment() throws ParseException {
                     Token t;
    jj_consume_token(22);
    t = jj_consume_token(INTEGER);
                            {if (true) return Integer.parseInt(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public void markingEntry() throws ParseException {
                        STGPlace p; int value = 1;
<<<<<<< TREE
    if (jj_2_19(3)) {
=======
    if (jj_2_20(3)) {
>>>>>>> MERGE-SOURCE
      p = implicitPlaceReference();
<<<<<<< TREE
    } else if (jj_2_20(3)) {
=======
    } else if (jj_2_21(3)) {
>>>>>>> MERGE-SOURCE
      p = explicitPlaceReference();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
<<<<<<< TREE
    if (jj_2_21(3)) {
=======
    if (jj_2_22(3)) {
>>>>>>> MERGE-SOURCE
      value = assignment();
    } else {
      ;
    }
                p.setTokens(value);
  }

  final public STGPlace implicitPlaceReference() throws ParseException {
        Node t1, t2;
        Token t;
        Integer tokens = null;
    jj_consume_token(18);
    t1 = anyTransition();
    jj_consume_token(20);
    t2 = anyTransition();
    jj_consume_token(19);
                {if (true) return implicitPlaces.get(Pair.of(t1,t2));}
    throw new Error("Missing return statement in function");
  }

  final public STGPlace explicitPlaceReference() throws ParseException {
        Token t;
        String name;
        Integer tokens = null;
    t = jj_consume_token(NAME);
                       name = t.image;
                {if (true) return (STGPlace) stg.getNodeByReference (name);}
    throw new Error("Missing return statement in function");
  }

  final public void graph() throws ParseException {
    jj_consume_token(GRAPH);
    jj_consume_token(LINEBREAK);
    label_8:
    while (true) {
      graphLine();
      jj_consume_token(LINEBREAK);
<<<<<<< TREE
      if (jj_2_22(3)) {
=======
      if (jj_2_23(3)) {
>>>>>>> MERGE-SOURCE
        ;
      } else {
        break label_8;
      }
    }
  }

  final public Triple<String, Direction, Integer> signalTransition() throws ParseException {
        Token t;
        String name;
        Direction direction;
        Integer instance = null;
    t = jj_consume_token(NAME);
                     name = t.image;
    t = jj_consume_token(DIRECTION);
                          direction = Direction.fromString(t.image);
<<<<<<< TREE
    if (jj_2_23(3)) {
=======
    if (jj_2_24(3)) {
>>>>>>> MERGE-SOURCE
      jj_consume_token(21);
      t = jj_consume_token(INTEGER);
                                        instance = Integer.parseInt(t.image);
    } else {
      ;
    }
          {if (true) return Triple.of (name, direction, instance);}
    throw new Error("Missing return statement in function");
  }

  final public Pair<String, Integer> dummyTransition() throws ParseException {
        Token t;
        String name;
        Integer instance = null;
    t = jj_consume_token(NAME);
                     name = t.image;
<<<<<<< TREE
    if (jj_2_24(3)) {
=======
    if (jj_2_25(3)) {
>>>>>>> MERGE-SOURCE
      jj_consume_token(21);
      t = jj_consume_token(INTEGER);
                               instance = Integer.parseInt(t.image);
    } else {
      ;
    }
          {if (true) return Pair.of (name, instance);}
    throw new Error("Missing return statement in function");
  }

  final public Node anyTransition() throws ParseException {
        Triple<String, Direction, Integer> r;
        Pair<String, Integer> r2;
        Node t;
<<<<<<< TREE
    if (jj_2_25(3)) {
=======
    if (jj_2_26(3)) {
>>>>>>> MERGE-SOURCE
      r = signalTransition();
                                   t = getOrCreate(r);
<<<<<<< TREE
    } else if (jj_2_26(3)) {
=======
    } else if (jj_2_27(3)) {
>>>>>>> MERGE-SOURCE
      r2 = dummyTransition();
                                   t = getOrCreate(r2);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public void graphLine() throws ParseException {
        Token t;
        Node from, to;
<<<<<<< TREE
    if (jj_2_27(2147483647)) {
=======
    if (jj_2_28(2147483647)) {
>>>>>>> MERGE-SOURCE
      from = anyTransition();
<<<<<<< TREE
    } else if (jj_2_28(3)) {
=======
    } else if (jj_2_29(3)) {
>>>>>>> MERGE-SOURCE
      t = jj_consume_token(NAME);
                       from = getOrCreate(t.image);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_9:
    while (true) {
<<<<<<< TREE
      if (jj_2_29(3)) {
=======
      if (jj_2_30(3)) {
>>>>>>> MERGE-SOURCE
        ;
      } else {
        break label_9;
      }
<<<<<<< TREE
      if (jj_2_30(2147483647)) {
=======
      if (jj_2_31(2147483647)) {
>>>>>>> MERGE-SOURCE
        to = anyTransition();
<<<<<<< TREE
      } else if (jj_2_31(3)) {
=======
      } else if (jj_2_32(3)) {
>>>>>>> MERGE-SOURCE
        t = jj_consume_token(NAME);
                               to = getOrCreate(t.image);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                    createArc(from, to);
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

<<<<<<< TREE
=======
  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_3_8() {
    if (jj_scan_token(INTERNAL_HEADER)) return true;
    if (jj_3R_12()) return true;
    return false;
  }

>>>>>>> MERGE-SOURCE
  private boolean jj_3_7() {
<<<<<<< TREE
    if (jj_scan_token(INTERNAL_HEADER)) return true;
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3_6() {
=======
>>>>>>> MERGE-SOURCE
    if (jj_scan_token(OUTPUT_HEADER)) return true;
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3R_12() {
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
<<<<<<< TREE
      if (jj_3_10()) { jj_scanpos = xsp; break; }
=======
      if (jj_3_11()) { jj_scanpos = xsp; break; }
>>>>>>> MERGE-SOURCE
    }
    return false;
  }

<<<<<<< TREE
  private boolean jj_3_5() {
=======
  private boolean jj_3_6() {
>>>>>>> MERGE-SOURCE
    if (jj_scan_token(INPUT_HEADER)) return true;
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3R_21() {
    if (jj_scan_token(NAME)) return true;
    if (jj_scan_token(DIRECTION)) return true;
    Token xsp;
    xsp = jj_scanpos;
<<<<<<< TREE
    if (jj_3_23()) jj_scanpos = xsp;
=======
    if (jj_3_24()) jj_scanpos = xsp;
>>>>>>> MERGE-SOURCE
    return false;
  }

<<<<<<< TREE
  private boolean jj_3_3() {
=======
  private boolean jj_3_4() {
>>>>>>> MERGE-SOURCE
    if (jj_scan_token(LINEBREAK)) return true;
    return false;
  }

  private boolean jj_3R_10() {
    Token xsp;
